--- a/data/Python/Pandas_exercise.ipynb
+++ b/data/Python/Pandas_exercise.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Führe die Übung in Python mit der Datei ```/vol/lehre/msmoabs2024/fileformats/studierende.txt``` durch.\\\n",
+    "Führe die Übung in Python mit der Datei ```/Data/Unix/students.txt``` durch.\\\n",
     "Importiere sie als Pandas Dataframe und löse die folgenden Aufgaben:"
    ]
   },
