--- a/data/Python/Python_solutions.ipynb
+++ b/data/Python/Python_solutions.ipynb
@@ -769,7 +769,7 @@
    "source": [
     "def greater_than_ten(num):\n",
     "    return(num>10)\n",
-    "greaterThanTen(19)"
+    "greater_than_ten(19)"
    ]
   },
   {
@@ -838,7 +838,7 @@
     "    else:\n",
     "        res = num*9\n",
     "    return(res)\n",
-    "simpleMult(2)"
+    "simple_mult(2)"
    ]
   },
   {
@@ -1036,9 +1036,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python_data_analysis",
+   "display_name": "ggmap",
    "language": "python",
-   "name": "python_data_analysis"
+   "name": "ggmap"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1050,7 +1050,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
